derive/tests/snapshots/on_delete_set_zero_uuid/Author/get_all_authors.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `author` table.
    pub fn get_all_authors<'a>(&'a self) -> impl Iterator<Item = Author> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().author().iter()
    }
}
